--- a/web/usuario/calificacion/Create.xhtml
+++ b/web/usuario/calificacion/Create.xhtml
@@ -27,7 +27,7 @@
                     </h:selectOneMenu>
                 </h:panelGrid>
                 <br />
-                <h:commandLink action="#{calificacionController.create}" value="#{bundle.CreateCalificacionSaveLink}" />
+                <h:commandLink action="#{calificacionController.create}" value="Guardar" />
                 <br />
                 <br />
                 <h:commandLink action="#{calificacionController.prepareList}" value="#{bundle.CreateCalificacionShowAllLink}" immediate="true"/>
