--- a/web/usuario/calificacion/Edit.xhtml
+++ b/web/usuario/calificacion/Edit.xhtml
@@ -26,7 +26,7 @@
                         <f:selectItems value="#{platoRestauranteController.itemsAvailableSelectOne}"/>
                     </h:selectOneMenu>
                 </h:panelGrid>
-                <h:commandLink action="#{calificacionController.update}" value="#{bundle.EditCalificacionSaveLink}"/>
+                <h:commandLink action="#{calificacionController.update}" value="Guardar"/>
                 <br />
                 <br />
                 <h:link outcome="View" value="#{bundle.EditCalificacionViewLink}"/>
