--- a/web/usuario/platoRestaurante/Create.xhtml
+++ b/web/usuario/platoRestaurante/Create.xhtml
@@ -68,7 +68,7 @@
                             <p:panelGrid class="tblCentfull">
                                 <p:row>
                                     <p:column class="alDer">
-                                        <h:commandButton class="btn btn-glotonLight btn-lg" action="#{platoRestauranteController.create}" value="#{bundle.CreatePlatoRestauranteSaveLink}" />
+                                        <h:commandButton class="btn btn-glotonLight btn-lg" action="#{platoRestauranteController.create}" value="Guardar" />
                                     </p:column>
                                 </p:row>
                             </p:panelGrid>
