--- a/web/usuario/platoRestaurante/Edit.xhtml
+++ b/web/usuario/platoRestaurante/Edit.xhtml
@@ -74,7 +74,7 @@
                             <p:panelGrid class="tblCentfull">
                                 <p:row>
                                     <p:column class="alDer">
-                                        <h:commandButton class="btn btn-glotonLight btn-lg" action="#{platoRestauranteController.update}" value="#{bundle.EditPlatoRestauranteSaveLink}"/>
+                                        <h:commandButton class="btn btn-glotonLight btn-lg" action="#{platoRestauranteController.update}" value="Guardar"/>
                                     </p:column>
                                 </p:row>
                             </p:panelGrid>
