--- a/web/usuario/platoRestaurante/List.xhtml
+++ b/web/usuario/platoRestaurante/List.xhtml
@@ -52,8 +52,8 @@
                             <h:outputText escape="false" value="#{bundle.ListPlatoRestauranteEmpty}" rendered="#{platoRestauranteController.items.rowCount == 0}"/>
                             <h:panelGroup rendered="#{platoRestauranteController.items.rowCount > 0}">
                                 <h:outputText value="#{platoRestauranteController.pagination.pageFirstItem + 1}..#{platoRestauranteController.pagination.pageLastItem + 1}/#{platoRestauranteController.pagination.itemsCount}"/>&nbsp;
-                                <h:commandLink action="#{platoRestauranteController.previous}" value="#{bundle.Previous} #{platoRestauranteController.pagination.pageSize}" rendered="#{platoRestauranteController.pagination.hasPreviousPage}"/>&nbsp;
-                                <h:commandLink action="#{platoRestauranteController.next}" value="#{bundle.Next} #{platoRestauranteController.pagination.pageSize}" rendered="#{platoRestauranteController.pagination.hasNextPage}"/>&nbsp;
+                                <h:commandLink action="#{platoRestauranteController.previous}" value="Anterior" rendered="#{platoRestauranteController.pagination.hasPreviousPage}"/>&nbsp;
+                                <h:commandLink action="#{platoRestauranteController.next}" value="Siguiente" rendered="#{platoRestauranteController.pagination.hasNextPage}"/>&nbsp;
                                 <h:dataTable  class="tblCentfull" value="#{platoRestauranteController.items}" var="item" border="0" cellpadding="2" cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" style="border:solid 1px">
                                     
                                     <h:column>
@@ -91,9 +91,9 @@
                                         <f:facet name="header">
                                             <h:outputText value="Opciones"/>
                                         </f:facet>
-                                        <h:commandButton class="btn btn-glotonLight" action="#{platoRestauranteController.prepareEdit}" value="#{bundle.ListPlatoRestauranteEditLink}"/>
+                                        <h:commandButton class="btn btn-glotonLight" action="#{platoRestauranteController.prepareEdit}" value="Editar"/>
                                         <h:outputText value=" "/>
-                                        <h:commandButton class="btn btn-glotonDark" action="#{platoRestauranteController.destroy}" value="#{bundle.ListPlatoRestauranteDestroyLink}"/>
+                                        <h:commandButton class="btn btn-glotonDark" action="#{platoRestauranteController.destroy}" value="Eliminar"/>
                                         <div style="height: 8px;"></div>
                                     </h:column>
                                 </h:dataTable>
