--- a/web/admin/categoria/List.xhtml
+++ b/web/admin/categoria/List.xhtml
@@ -57,8 +57,8 @@
                             <h:outputText escape="false" value="#{bundle.ListCategoriaEmpty}" rendered="#{categoriaController.items.rowCount == 0}"/>
                             <h:panelGroup rendered="#{categoriaController.items.rowCount > 0}">
                                 <h:outputText value="#{categoriaController.pagination.pageFirstItem + 1}..#{categoriaController.pagination.pageLastItem + 1}/#{categoriaController.pagination.itemsCount}"/>&nbsp;
-                                <h:commandLink action="#{categoriaController.previous}" value="#{bundle.Previous} #{categoriaController.pagination.pageSize}" rendered="#{categoriaController.pagination.hasPreviousPage}"/>&nbsp;
-                                <h:commandLink action="#{categoriaController.next}" value="#{bundle.Next} #{categoriaController.pagination.pageSize}" rendered="#{categoriaController.pagination.hasNextPage}"/>&nbsp;
+                                <h:commandLink action="#{categoriaController.previous}" value="Anterior" rendered="#{categoriaController.pagination.hasPreviousPage}"/>&nbsp;
+                                <h:commandLink action="#{categoriaController.next}" value="Siguiente" rendered="#{categoriaController.pagination.hasNextPage}"/>&nbsp;
                                 <h:dataTable class="tblCentfull" value="#{categoriaController.items}" var="item" border="0" cellpadding="2" cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" style="border:solid 1px">
                                     <h:column>
                                         <f:facet name="header">
@@ -82,9 +82,9 @@
                                         <f:facet name="header">
                                             <h:outputText value="Opciones"/>
                                         </f:facet>
-                                        <h:commandButton class="btn btn-glotonLight" action="#{categoriaController.prepareEdit}" value="#{bundle.ListCategoriaEditLink}"/>
+                                        <h:commandButton class="btn btn-glotonLight" action="#{categoriaController.prepareEdit}" value="Editar"/>
                                         <h:outputText value=" "/>
-                                        <h:commandButton class="btn btn-glotonDark" action="#{categoriaController.destroy}" value="#{bundle.ListCategoriaDestroyLink}"/>
+                                        <h:commandButton class="btn btn-glotonDark" action="#{categoriaController.destroy}" value="Eliminar"/>
                                         <div style="height: 8px;"></div>
                                     </p:column>
                                 </h:dataTable>
