--- a/web/admin/plato/List.xhtml
+++ b/web/admin/plato/List.xhtml
@@ -55,8 +55,8 @@
                             <h:outputText escape="false" value="#{bundle.ListPlatoEmpty}" rendered="#{platoController.items.rowCount == 0}"/>
                             <h:panelGroup rendered="#{platoController.items.rowCount > 0}">
                                 <h:outputText value="#{platoController.pagination.pageFirstItem + 1}..#{platoController.pagination.pageLastItem + 1}/#{platoController.pagination.itemsCount}"/>&nbsp;
-                                <h:commandLink action="#{platoController.previous}" value="#{bundle.Previous} #{platoController.pagination.pageSize}" rendered="#{platoController.pagination.hasPreviousPage}"/>&nbsp;
-                                <h:commandLink action="#{platoController.next}" value="#{bundle.Next} #{platoController.pagination.pageSize}" rendered="#{platoController.pagination.hasNextPage}"/>&nbsp;
+                                <h:commandLink action="#{platoController.previous}" value="Anterior" rendered="#{platoController.pagination.hasPreviousPage}"/>&nbsp;
+                                <h:commandLink action="#{platoController.next}" value="Siguiente" rendered="#{platoController.pagination.hasNextPage}"/>&nbsp;
                                 <h:dataTable class="tblCentfull" value="#{platoController.items}" var="item" border="0" cellpadding="2" cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" style="border:solid 1px">
                                     <h:column>
                                         <f:facet name="header">
@@ -86,9 +86,9 @@
                                         <f:facet name="header">
                                             <h:outputText value="Opciones"/>
                                         </f:facet>
-                                        <h:commandButton class="btn btn-glotonLight" action="#{platoController.prepareEdit}" value="#{bundle.ListPlatoEditLink}"/>
+                                        <h:commandButton class="btn btn-glotonLight" action="#{platoController.prepareEdit}" value="Editar"/>
                                         <h:outputText value=" "/>
-                                        <h:commandButton class="btn btn-glotonDark" action="#{platoController.destroy}" value="#{bundle.ListPlatoDestroyLink}"/>
+                                        <h:commandButton class="btn btn-glotonDark" action="#{platoController.destroy}" value="Eliminar"/>
                                         <div style="height: 8px;"></div>
                                     </h:column>
                                 </h:dataTable>
