--- a/web/admin/categoria/Edit.xhtml
+++ b/web/admin/categoria/Edit.xhtml
@@ -27,7 +27,7 @@
                         <p:column class="btn-glotonLight">
                             <a href="../usuario/List.xhtml" class="btn btn-glotonLight btn-lg">Gestion de Usuarios</a>
                         </p:column>
-                        <p:column class="btn btn-glotonLogout">
+                        <p:column class="btn-glotonLogout" style="vertical-align:middle;">
                             <h:commandButton class="btn btn-glotonLogout btn-lg" value="Logout" action="#{sessionController.logout()}"/>
                         </p:column>
                     </p:row>
