--- a/web/admin/plato/List.xhtml
+++ b/web/admin/plato/List.xhtml
@@ -80,7 +80,8 @@
                                         <f:facet name="header">
                                             <h:outputText value="Categoría"/>
                                         </f:facet>
-                                        <h:outputText value="#{item.tblcategoriacatId}"/>
+                                        <!--<h:outputText value="#{item.tblcategoriacatId}"/>-->
+                                        <h:outputText value="#{platoController.ObtenerNomCategoria(item.tblcategoriacatId)}"/>
                                     </h:column>
                                     <h:column>
                                         <f:facet name="header">
