--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -6,7 +6,8 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <title>Glot-On</title>
+        <title>Gloton</title>
+        <link rel="shortcut icon" href="resources/imagenes/favicon.ico"></link>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous"></link>
 
         <h:outputStylesheet library="css" name="estilos.css"/>
