--- a/web/usuario/platoRestaurante/Create.xhtml
+++ b/web/usuario/platoRestaurante/Create.xhtml
@@ -55,8 +55,8 @@
                                 </h:selectOneMenu>
                                 <h:outputLabel style="color:#6E4A00;" value="Nombre" for="platDescripcion" />
                                 <h:inputText class="form-control" id="platDescripcion" value="#{platoRestauranteController.selected.platDescripcion}" title="#{bundle.CreatePlatoRestauranteTitle_platDescripcion}" />
-                                <h:outputLabel style="color:#6E4A00;" value="Ingredientes" for="platIngredientes" />
-                                <h:inputTextarea rows="5" class="form-control" id="platIngredientes" value="#{platoRestauranteController.selected.platIngredientes}" />
+                                <h:outputLabel style="color:#6E4A00;" value="Descripción" for="platIngredientes" />
+                                <h:inputTextarea rows="8" class="form-control" id="platIngredientes" value="#{platoRestauranteController.selected.platIngredientes}" />
                                 <h:outputLabel style="color:#6E4A00;" value="Precio" for="platPrecio" />
                                 <h:inputText  class="form-control" id="platPrecio" value="#{platoRestauranteController.selected.platPrecio}" title="#{bundle.CreatePlatoRestauranteTitle_platPrecio}" />
                                 <h:outputLabel style="color:#6E4A00;" value="Estado" for="platEstado" />
