--- a/web/admin/categoria/Create.xhtml
+++ b/web/admin/categoria/Create.xhtml
@@ -55,22 +55,15 @@
                         <h:panelGroup id="messagePanel" layout="block">
                             <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
                         </h:panelGroup>
-
-
-
                         <h:form>
-                            <h:panelGrid columns="2"  class="tblCentfull">
-                                <h:outputLabel class="anchoImagen" value="Imagen" for="fUpload" />
-                                <p:fileUpload class="anchoImagenLabel"  id="fUpload" fileUploadListener="#{categoriaController.cargarFoto}" mode="advanced" dragDropSupport="false"
+                            <p:outputLabel value="#{categoriaController.foto.fileName}"/>
+                            <h:panelGrid columns="2" style="width: 100%; text-align: center;">
+                                <h:outputLabel class="tblCent" value="Imagen" for="fUpload" />
+                                <p:fileUpload  class="anchoImagenLabel "  id="fUpload" fileUploadListener="#{categoriaController.cargarFoto}" mode="advanced" dragDropSupport="false"
                                                        label="Cargar" auto="true"  
-                                                       sizeLimit="1000000" invalidSizeMessage="Máximo 1 MegaByte" invalidFileMessage="Tipo de archivo no válido" fileLimit="1" allowTypes="/(\.|\/)(gif|jpe?g|png)$/"
-
-                                                       />
-                                        <p:outputLabel value="#{categoriaController.foto.fileName}"/>
-                            </h:panelGrid>
-                        </h:form> 
-
-                        <h:form>
+                                                       sizeLimit="1000000" invalidSizeMessage="Máximo 1 MegaByte" invalidFileMessage="Tipo de archivo no válido" fileLimit="1" allowTypes="/(\.|\/)(gif|jpe?g|png)$/"/>
+                                </h:panelGrid>
+                        </h:form><h:form>
                             <h:panelGrid columns="2" class="tblCentfull">
                                 <h:outputLabel value="Nombre" for="catNombre" />
                                 <h:inputText class="form-control" id="catNombre" value="#{categoriaController.selected.catNombre}" title="#{bundle.CreateCategoriaTitle_catNombre}" />
