mostrar imagenes en las vistas donde se suben las mismas y otros cambios

--- a/web/admin/categoria/Edit.xhtml
+++ b/web/admin/categoria/Edit.xhtml
@@ -62,9 +62,7 @@
                                 <h:outputLabel class="tblCent" value="Imagen" for="fUpload" />
                                 <p:fileUpload  class="anchoImagenLabel "  id="fUpload" fileUploadListener="#{categoriaController.cargarFoto}" mode="advanced" dragDropSupport="false"
                                                        label="Cargar" auto="true"  
-                                                       sizeLimit="1000000" invalidSizeMessage="Máximo 1 MegaByte" invalidFileMessage="Tipo de archivo no válido" fileLimit="1" allowTypes="/(\.|\/)(gif|jpe?g|png)$/"
-
-                                                       />
+                                                       sizeLimit="1000000" invalidSizeMessage="Máximo 1 MegaByte" invalidFileMessage="Tipo de archivo no válido" fileLimit="1" allowTypes="/(\.|\/)(gif|jpe?g|png)$/"/>
                             </h:panelGrid>
                         </h:form> 
                         
