corregida referencia erronea desde editar platillo a gestionar restaurante

--- a/web/usuario/platoRestaurante/Edit.xhtml
+++ b/web/usuario/platoRestaurante/Edit.xhtml
@@ -20,7 +20,7 @@
                             <a href="List.xhtml" class="btn btn-glotonLight btn-lg">Gestion de la carta</a>
                         </p:column>
                         <p:column class="btn-glotonLight">
-                            <a href="../restaurante/EditarRestLogeado.xhtml.xhtml" class="btn btn-glotonLight btn-lg">Gestion del Restaurante</a>
+                            <a href="../restaurante/EditarRestLogeado.xhtml" class="btn btn-glotonLight btn-lg">Gestion del Restaurante</a>
                         </p:column>
                         <p:column class="btn-glotonLight">
                             <a href="../calificacion/List.xhtml" class="btn btn-glotonLight btn-lg">Reporte de Calificaciones</a>
